2002-11-09  Bastien Nocera  <hadess@hadess.net>

	* data/playlist-playing.png: invert the colours, otherwise you can't
	see a thing with most of the themes

2002-11-09  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade: change the frames to no shadow, and put the
	labels in bold (looks better indeed)

2002-11-08  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/properties.glade:
	* data/totem.glade:
	* src/gtk-xine.c: (gtk_xine_instance_init), (gtk_xine_finalize),
	(hide_dialog), (gtk_xine_properties_dialog_get),
	(gtk_xine_properties_get_title), (gtk_xine_properties_set_label),
	(gtk_xine_properties_reset),
	(gtk_xine_properties_set_from_current),
	(gtk_xine_properties_update):
	* src/gtk-xine.h:
	* src/totem.c: (totem_action_set_mrl), (on_about1_activate),
	(on_properties1_activate), (hide_prefs), (totem_callback_connect),
	(main): properties work (Closes: #92098), and fix the copyright notice
	so that Jordi stops bugging me

2002-11-08  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade: added

2002-11-08  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_play), (gtk_xine_set_speed),
	(gtk_xine_set_scale_ratio), (gtk_xine_properties_dialog_get),
	(gtk_xine_properties_get_title), (gtk_xine_properties_update):
	* src/gtk-xine.h: fix for when seeking goes beyond the length of the
	stream, starts of the properties dialog

2002-11-07  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem.c: (totem_action_set_mrl), (on_about1_activate),
	(on_error_event), (label_create): fix i18n issues (Closes: #97636)

2002-11-07  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.h:
	* src/totem.c: (auto_resize_changed_cb), (mediadev_changed_cb),
	(video_widget_create), (totem_setup_preferences):
	* src/totem.h: make preferences work, add copyright notices

2002-11-07  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem.c: (totem_action_play_media), (video_widget_create):