@@ -51,7 +51,7 @@
 	  <property name="spacing">0</property>
 
 	  <child>
-	    <widget class="GtkFrame" id="frame3">
+	    <widget class="GtkFrame" id="general">
 	      <property name="border_width">4</property>
 	      <property name="visible">True</property>
 	      <property name="label_xalign">0</property>
@@ -240,7 +240,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkFrame" id="frame1">
+	    <widget class="GtkFrame" id="video">
 	      <property name="border_width">4</property>
 	      <property name="visible">True</property>
 	      <property name="label_xalign">0</property>
@@ -429,7 +429,7 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkFrame" id="frame2">
+	    <widget class="GtkFrame" id="audio">
 	      <property name="border_width">4</property>
 	      <property name="visible">True</property>
 	      <property name="label_xalign">0</property>
